[project]
name = "reconstruct-kenburns"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python-headless",
    "openexr",
    "openexr-python",
    "rerun-sdk>=0.30",
]

[project.scripts]
parse-camera-poses = "parse_camera_poses:main"
match-poses = "match_poses:main"
reconstruct-3d = "reconstruct_3d:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "parse_camera_poses.py",
    "match_poses.py",
    "reconstruct_3d.py",
]
